--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
 Merdasa Belay <merdasabelay@gmail.com>
+Ammanuel Hailye <ammantd2@gmail.com>
